--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -3,7 +3,7 @@
   color: hsl(0, 100%, 50%);
 }
 
-.small-para {
+.para.small-para {
   font-size: 14px;
 }
 
@@ -11,6 +11,11 @@
   font-size: 22px;
 }
 
+#confirm-button {
+  background-color: green;
+  color: white;
+  font-weight: bold;
+}
 .confirm {
   background: green;
   color: white;
@@ -23,7 +28,7 @@
   font-size: 20px;
 }
 
-.child {
+.text.child {
   color: red;
   font-size: 14px;
 }
