--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,17 +1,28 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
   width: 100px;
   height: 100px;
+  padding: 52px;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  align-items: center;
 }
 
+.imgs {
+  display: flex;
+  justify-content: center;
+}
+
+.info {
+  max-width: 200px;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
